# krunner-echo

./: CMakeLists.txt  README.md  install.sh  main.cpp  main.h  plasma-runner-echo.desktop  uninstall.sh
